# sliding-window-gdg-decoder

./: .gitignore  Dockerfile  README.md  clean.sh  pyproject.toml  setup.py
doc/: Sliding Window GDG.ipynb  Sliding Window OSD.ipynb
notebooks/: sliding-window-gdg.ipynb  sliding-window-osd.ipynb
src/: bp_guessing_decoder.pyx
sw_gdg/: __init__.py  bp4_osd.pxd  bp4_osd.pyx  bp_guessing_decoder.pxd  bp_guessing_decoder.pyx  c_util.pxd  c_util.pyx  osd_window.pxd  osd_window.pyx
sw_gdg/cpp/: README.md
