[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-gdg"
version = "0.1.0"
description = "Sliding window with Guided Decimation Guessing Decoding for QLDPC codes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "ldpc"
]

[tool.setuptools]
packages = ["sw_gdg"]
